Add not(glb-toolbar--extended) to width full condition.

--- a/modules/wingsuit_lb/css/wingsuit_lb.core.css
+++ b/modules/wingsuit_lb/css/wingsuit_lb.core.css
@@ -2,7 +2,7 @@ div[data-off-canvas-main-canvas] {
   padding-right: 0 !important;
 }
 
-.glb-toolbar {
+.glb-toolbar:not(.glb-toolbar--extended) {
   width: 100% !important;
 }
 
