--- a/modules/wingsuit_lb/css/wingsuit-lb.link.css
+++ b/modules/wingsuit_lb/css/wingsuit-lb.link.css
@@ -22,6 +22,7 @@
   background-color: #ffffff;
   padding-top: 12px;
   padding-bottom: 12px;
+  box-shadow: 0px -15px 20px rgba(243, 244, 246, 0.9);
 }
 
 .ws-lb-link svg, .ws-lb-link img {
