--- a/modules/wingsuit_lb/css/wingsuit-lb.link.css
+++ b/modules/wingsuit_lb/css/wingsuit-lb.link.css
@@ -17,11 +17,10 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  text-align: center;
+  text-align: left;
   font-weight: bold;
   background-color: #ffffff;
-  padding-top: 12px;
-  padding-bottom: 12px;
+  padding: 12px;
   box-shadow: 0px -15px 20px rgba(243, 244, 246, 0.9);
 }
 
@@ -30,7 +29,8 @@
   max-height: 100%;
   width: auto;
   position: absolute;
-  top: 50%;
+  top: calc(50% - 20px);
   left: 50%;
+  padding: 10px 40px;
   transform: translate(-50%, -50%);
 }
