--- a/modules/wingsuit_lb/css/wingsuit-lb.link.css
+++ b/modules/wingsuit_lb/css/wingsuit-lb.link.css
@@ -18,6 +18,7 @@
   left: 0;
   width: 100%;
   text-align: left;
+  font-weight: 500;
   background-color: #ffffff;
   padding: 12px;
   box-shadow: 0px -15px 20px rgba(243, 244, 246, 0.9);
